07-session-ingress/devops-argo/jenkins/deploy-pg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
      namespace: discovery
    spec:
      containers:
      - image: postgres:14
        name: postgres
        resources:
          limits:
            cpu: 400m
            memory: 400Mi
          requests:
            cpu: 200m
            memory: 200Mi
        volumeMounts:
        - name: pvc-pg
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: pvc-pg
        persistentVolumeClaim:
          claimName: pvc-pg
