07-session-ingress/devops-argo/jenkins/deploy-sonar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarqube
  name: sonarqube
  namespace: discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
      namespace: discovery
    spec:
      containers:
      - image: sonarqube:lts-community
        name: sonarqube
        resources:
          limits:
            cpu: 400m
            memory: 3Gi
          requests:
            cpu: 200m
            memory: 200Mi
        volumeMounts:
        - name: pvc-sonar-data
          mountPath: /opt/sonarqube/data
        - name: pvc-sonar-extensions
          mountPath: /opt/sonarqube/extensions
        - name: pvc-sonar-logs
          mountPath: /opt/sonarqube/logs
      volumes:
      - name: pvc-sonar-data
        persistentVolumeClaim:
          claimName: pvc-sonar-data
      - name: pvc-sonar-extensions
        persistentVolumeClaim:
          claimName: pvc-sonar-extensions
      - name: pvc-sonar-logs
        persistentVolumeClaim:
          claimName: pvc-sonar-logs
