07-session-ingress/devops-argo/jenkins/svc-pg.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-service
  namespace: discovery
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      name: pg-port
