07-session-ingress/devops-argo/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar-ingress
  namespace: discovery
spec:
  ingressClassName: "nginx"
  rules:
  - host: quality.lcf.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonar-service
            port:
              number: 9000
