07-session-ingress/devops-argo/jenkins/jenkins.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: discovery
  labels:
    app: jenkins
    criticity: high
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-server
  template:
    metadata:
      labels:
        app: jenkins-server
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      serviceAccountName: jenkins-admin
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts-jdk21
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - name: httpport
              containerPort: 8080
            - name: jnlpport
              containerPort: 50000
          livenessProbe:
            httpGet:
              path: "/login"
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: "/login"
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
              claimName: pvc-jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service-jnlp
  namespace: discovery
  labels:
    app: jenkins
    criticity: high
spec:
  selector:
    app: jenkins-server
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: jenkins-http-interne
    - port: 50000
      targetPort: 50000
      name: jenkins-jnlp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: discovery
  labels:
    app: jenkins
    criticity: high
spec:
  ingressClassName: "nginx"
  rules:
  - host: cicd.lcf.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-service-jnlp
            port:
              number: 8080
